examples/test/testpolicy18201.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18201
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key37: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value32
          key27: value20
          key20: value45
      podSelector:
        matchLabels:
          key45: value9
          key20: value48
